Small adjustments and fix nav menu from overflowing past screen width

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -79,7 +79,7 @@ button {
   border-radius: 50%;
   filter: blur(32px);
   opacity: .25;
-  inset: -.25em -5em;
+  inset: -.25em -2.5em;
   z-index: -2;
 }
 
@@ -327,7 +327,8 @@ button:hover::after {
 // Slimmer for the download page
 // TODO: Can we just remove .download-link and use this instead?
 .btn-slim {
-  min-width: 11.0rem;
+  font-size: var(--font-md)  !important;
+  min-width: 8.0rem;
   padding: 0.5rem 1rem;
 }
 
